--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@emotion/styled": "^11.13.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@wordpress/i18n": "^5.3.0",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
     "framer-motion": "^11.3.12",
