--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "css-loader": "^7.1.2",
     "framer-motion": "^11.3.12",
     "html-webpack-plugin": "^5.6.0",
+    "pnpm": "^9.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "style-loader": "^4.0.0",
