--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "pnpm": "^9.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.0",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.5.3",
