--- a/package.json
+++ b/package.json
@@ -1,46 +1,47 @@
 {
-  "name": "custom-code-snippets",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "build": "wp-scripts build",
-    "start": "wp-scripts start",
-    "setup": "pnpm install && composer install && composer dump-autoload"
-  },
-  "keywords": [
-    "code snippets",
-    "custom code snippets"
-  ],
-  "author": "milan",
-  "license": "ISC",
-  "dependencies": {
-    "@babel/core": "^7.24.9",
-    "@babel/preset-env": "^7.24.8",
-    "@babel/preset-react": "^7.24.7",
-    "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.13.0",
-    "@emotion/styled": "^11.13.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@wordpress/i18n": "^5.3.0",
-    "babel-loader": "^9.1.3",
-    "css-loader": "^7.1.2",
-    "framer-motion": "^11.3.12",
-    "html-webpack-plugin": "^5.6.0",
-    "pnpm": "^9.6.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.0",
-    "style-loader": "^4.0.0",
-    "ts-loader": "^9.5.1",
-    "typescript": "^5.5.3",
-    "webpack": "^5.93.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4",
-    "yarn": "^1.22.22"
-  },
-  "devDependencies": {
-    "@wordpress/scripts": "^28.3.0"
-  }
+	"name": "custom-code-snippets",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"build": "wp-scripts build",
+		"start": "wp-scripts start",
+		"setup": "pnpm install && composer install && composer dump-autoload"
+	},
+	"keywords": [
+		"code snippets",
+		"custom code snippets"
+	],
+	"author": "milan",
+	"license": "ISC",
+	"dependencies": {
+		"@chakra-ui/react": "^2.8.2",
+		"@emotion/react": "^11.13.0",
+		"@emotion/styled": "^11.13.0",
+		"@types/react": "^18.3.3",
+		"@types/react-dom": "^18.3.0",
+		"@wordpress/i18n": "^5.3.0",
+		"framer-motion": "^11.3.12",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-hook-form": "^7.52.2",
+		"react-router-dom": "^6.26.0",
+		"@monaco-editor/react": "^4.6.0"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.24.9",
+		"@babel/preset-env": "^7.24.8",
+		"@babel/preset-react": "^7.24.7",
+		"babel-loader": "^9.1.3",
+		"css-loader": "^7.1.2",
+		"html-webpack-plugin": "^5.6.0",
+		"pnpm": "^9.6.0",
+		"style-loader": "^4.0.0",
+		"ts-loader": "^9.5.1",
+		"typescript": "^5.5.3",
+		"webpack": "^5.93.0",
+		"webpack-cli": "^5.1.4",
+		"webpack-dev-server": "^5.0.4",
+		"@wordpress/scripts": "^28.3.0"
+	}
 }
