--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
 	"author": "milan",
 	"license": "ISC",
 	"dependencies": {
+		"@chakra-ui/icons": "^2.1.1",
 		"@chakra-ui/react": "^2.8.2",
 		"@emotion/react": "^11.13.0",
 		"@emotion/styled": "^11.13.0",
+		"@monaco-editor/react": "^4.6.0",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
 		"@wordpress/i18n": "^5.3.0",
@@ -25,13 +27,14 @@
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.52.2",
-		"react-router-dom": "^6.26.0",
-		"@monaco-editor/react": "^4.6.0"
+		"react-icons": "^5.2.1",
+		"react-router-dom": "^6.26.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.24.9",
 		"@babel/preset-env": "^7.24.8",
 		"@babel/preset-react": "^7.24.7",
+		"@wordpress/scripts": "^28.3.0",
 		"babel-loader": "^9.1.3",
 		"css-loader": "^7.1.2",
 		"html-webpack-plugin": "^5.6.0",
@@ -41,7 +44,6 @@
 		"typescript": "^5.5.3",
 		"webpack": "^5.93.0",
 		"webpack-cli": "^5.1.4",
-		"webpack-dev-server": "^5.0.4",
-		"@wordpress/scripts": "^28.3.0"
+		"webpack-dev-server": "^5.0.4"
 	}
 }
