--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@emotion/react": "^11.13.0",
 		"@emotion/styled": "^11.13.0",
 		"@monaco-editor/react": "^4.6.0",
+		"@tanstack/react-query": "^5.51.21",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
 		"@wordpress/i18n": "^5.3.0",
@@ -34,6 +35,7 @@
 		"@babel/core": "^7.24.9",
 		"@babel/preset-env": "^7.24.8",
 		"@babel/preset-react": "^7.24.7",
+		"@wordpress/api-fetch": "^7.4.0",
 		"@wordpress/scripts": "^28.3.0",
 		"babel-loader": "^9.1.3",
 		"css-loader": "^7.1.2",
