--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 		"@wordpress/i18n": "^5.3.0",
 		"framer-motion": "^11.3.12",
 		"react": "^18.3.1",
-		"react-date-picker": "^11.0.0",
+		"react-date-range": "^2.0.1",
 		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.52.2",
 		"react-icons": "^5.2.1",
@@ -36,6 +36,7 @@
 		"@babel/core": "^7.24.9",
 		"@babel/preset-env": "^7.24.8",
 		"@babel/preset-react": "^7.24.7",
+		"@types/react-date-range": "^1.4.9",
 		"@wordpress/api-fetch": "^7.4.0",
 		"@wordpress/scripts": "^28.3.0",
 		"babel-loader": "^9.1.3",
