--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@emotion/styled": "^11.13.0",
 		"@monaco-editor/react": "^4.6.0",
 		"@tanstack/react-query": "^5.51.21",
+		"@tanstack/react-query-devtools": "^5.51.23",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
 		"@wordpress/i18n": "^5.3.0",
