--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
 		"@wordpress/i18n": "^5.3.0",
+		"chakra-react-select": "^4.9.1",
 		"framer-motion": "^11.3.12",
 		"react": "^18.3.1",
 		"react-date-range": "^2.0.1",
 		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.52.2",
 		"react-icons": "^5.2.1",
+		"react-responsive-pagination": "^2.7.0",
 		"react-router-dom": "^6.26.0"
 	},
 	"devDependencies": {
