--- a/package.json
+++ b/package.json
@@ -44,11 +44,13 @@
 		"@wordpress/scripts": "^28.3.0",
 		"babel-loader": "^9.1.3",
 		"css-loader": "^7.1.2",
+		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.6.0",
 		"pnpm": "^9.6.0",
 		"style-loader": "^4.0.0",
 		"ts-loader": "^9.5.1",
 		"typescript": "^5.5.3",
+		"url-loader": "^4.1.1",
 		"webpack": "^5.93.0",
 		"webpack-cli": "^5.1.4",
 		"webpack-dev-server": "^5.0.4"
