--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
+		"lint": "eslint . --ext .ts,.tsx",
+		"lint:fix": "eslint . --ext .ts,.tsx --fix",
 		"build": "wp-scripts build",
 		"start": "wp-scripts start",
 		"setup": "pnpm install && composer install && composer dump-autoload"
@@ -33,7 +35,8 @@
 		"react-hook-form": "^7.52.2",
 		"react-icons": "^5.2.1",
 		"react-responsive-pagination": "^2.7.0",
-		"react-router-dom": "^6.26.0"
+		"react-router-dom": "^6.26.0",
+		"typescript-eslint": "^8.2.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.24.9",
@@ -44,6 +47,8 @@
 		"@wordpress/scripts": "^28.3.0",
 		"babel-loader": "^9.1.3",
 		"css-loader": "^7.1.2",
+		"eslint-plugin-react": "^7.35.0",
+		"eslint-plugin-react-hooks": "^4.6.2",
 		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.6.0",
 		"pnpm": "^9.6.0",
