--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
 	"scripts": {
 		"lint": "eslint . --ext .ts,.tsx",
 		"lint:fix": "eslint . --ext .ts,.tsx --fix",
-		"build": "wp-scripts build",
-		"start": "wp-scripts start",
-		"setup": "pnpm install && composer install && composer dump-autoload"
+		"start": "webpack --watch --mode development --config ./webpack.config.js",
+		"build": "webpack --mode production --config ./webpack.config.js",
+		"setup": "pnpm install && composer install && composer dump-autoload",
+		"makepot": "composer run makepot",
+		"release": "npm install && npm run build && gulp release"
 	},
 	"keywords": [
 		"code snippets",
@@ -19,44 +21,76 @@
 	"dependencies": {
 		"@chakra-ui/icons": "^2.1.1",
 		"@chakra-ui/react": "^2.8.2",
-		"@emotion/react": "^11.13.0",
+		"@emotion/react": "^11.13.3",
 		"@emotion/styled": "^11.13.0",
 		"@monaco-editor/react": "^4.6.0",
 		"@tanstack/react-query": "^5.51.21",
 		"@tanstack/react-query-devtools": "^5.51.23",
-		"@types/react": "^18.3.3",
-		"@types/react-dom": "^18.3.0",
-		"@wordpress/i18n": "^5.3.0",
+		"@wordpress/i18n": "^5.8.0",
 		"chakra-react-select": "^4.9.1",
-		"framer-motion": "^11.3.12",
-		"react": "^18.3.1",
+		"framer-motion": "^11.5.6",
 		"react-date-range": "^2.0.1",
-		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.52.2",
-		"react-icons": "^5.2.1",
+		"react-icons": "^5.3.0",
 		"react-responsive-pagination": "^2.7.0",
 		"react-router-dom": "^6.26.0",
 		"typescript-eslint": "^8.2.0"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.24.9",
-		"@babel/preset-env": "^7.24.8",
+		"@babel/core": "^7.25.2",
+		"@babel/plugin-transform-runtime": "^7.17.0",
+		"@babel/preset-env": "^7.25.4",
 		"@babel/preset-react": "^7.24.7",
+		"@babel/preset-typescript": "^7.24.7",
+		"@mr-hope/gulp-sass": "^3.1.1",
+		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
+		"@types/browser-sync": "^2.29.0",
+		"@types/gulp": "^4.0.17",
+		"@types/gulp-autoprefixer": "^0.0.37",
+		"@types/gulp-bump": "^2.8.6",
+		"@types/gulp-imagemin": "^8.0.6",
+		"@types/gulp-sass": "^5.0.4",
+		"@types/gulp-zip": "^4.0.4",
+		"@types/react": "^18.3.8",
 		"@types/react-date-range": "^1.4.9",
-		"@wordpress/api-fetch": "^7.4.0",
+		"@types/react-dom": "^18.3.0",
+		"@types/webpack-bundle-analyzer": "^4.7.0",
+		"@types/wordpress__api-fetch": "^3.2.4",
+		"@types/wordpress__i18n": "^3.4.0",
+		"@wordpress/api-fetch": "^7.8.0",
+		"@wordpress/dependency-extraction-webpack-plugin": "^6.8.0",
 		"@wordpress/scripts": "^28.3.0",
-		"babel-loader": "^9.1.3",
+		"babel-loader": "^9.2.1",
+		"browser-sync": "^3.0.2",
 		"css-loader": "^7.1.2",
+		"dotenv": "^16.4.5",
+		"dotenv-webpack": "8.0.1",
 		"eslint-plugin-react": "^7.35.0",
 		"eslint-plugin-react-hooks": "^4.6.2",
 		"file-loader": "^6.2.0",
+		"fork-ts-checker-webpack-plugin": "^9.0.2",
+		"gulp": "^5.0.0",
+		"gulp-autoprefixer": "^9.0.0",
+		"gulp-bump": "^3.2.0",
+		"gulp-imagemin": "^9.1.0",
+		"gulp-sass": "^5.1.0",
+		"gulp-typescript": "^6.0.0-alpha.1",
+		"gulp-zip": "^6.0.0",
+		"mini-css-extract-plugin": "^2.9.1",
+		"node-sass": "^7.0.3",
 		"pnpm": "^9.6.0",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-refresh": "^0.14.2",
+		"sass-loader": "^16.0.2",
 		"style-loader": "^4.0.0",
 		"ts-loader": "^9.5.1",
-		"typescript": "^5.5.3",
+		"typescript": "^5.6.2",
 		"url-loader": "^4.1.1",
-		"webpack": "^5.93.0",
+		"webpack": "^5.94.0",
+		"webpack-bundle-analyzer": "^4.10.2",
 		"webpack-cli": "^5.1.4",
-		"webpack-dev-server": "^5.0.4"
+		"webpack-dev-server": "^5.1.0",
+		"webpackbar": "^6.0.1"
 	}
 }
