--- a/composer.json
+++ b/composer.json
@@ -1,46 +1,54 @@
 {
-  "name": "custom-code-snippets/custom-code-snippets",
-  "description": "Effortlessly user can add the block of code to code file.",
-  "autoload": {
-    "psr-4": {
-      "CCSNPT\\": "includes/"
-    }
-  },
-  "authors": [
-    {
-      "name": "milan",
-      "email": "chaudharymilan996@gmail.com"
-    }
-  ],
-  "require-dev": {},
-  "scripts": {
-    "phpcs": [
-      "phpcs -s -p"
-    ],
-    "phpcs-pre-commit": [
-      "phpcs -s -p -n"
-    ],
-    "phpcbf": [
-      "phpcbf -p"
-    ],
-    "makepot-audit": [
-      "wp --allow-root i18n make-pot . --exclude=\".github,.wordpress-org,bin,node_modules,vendor,tests, build\" --slug=custom-code-snippets"
-    ],
-    "makepot": [
-      "@makepot-audit --skip-audit"
-    ]
-  },
-  "extra": {
-    "scripts-description": {
-      "phpcs": "Analyze code against the WordPress coding standards with PHP_CodeSniffer",
-      "phpcbf": "Fix coding standards warnings/errors automatically with PHP Code Beautifier",
-      "makepot-audit": "Generate langauges/custom-code-snippets.pot file and run audit",
-      "makepot": "Generate langauges/custom-code-snippets.pot file"
-    }
-  },
-  "config": {
-    "allow-plugins": {
-      "dealerdirect/phpcodesniffer-composer-installer": true
-    }
-  }
+	"name": "custom-code-snippets/custom-code-snippets",
+	"description": "Effortlessly user can add the block of code to code file.",
+	"version": "1.0.0",
+	"autoload": {
+		"psr-4": {
+			"CCSNPT\\": "includes/"
+		}
+	},
+	"authors": [
+		{
+			"name": "milan",
+			"email": "chaudharymilan996@gmail.com"
+		}
+	],
+	"require": {
+		"composer/installers": "1.11.0"
+	},
+	"require-dev": {
+		"wp-cli/wp-cli": "^2.4",
+		"wp-cli/i18n-command": "^2.2"
+	},
+	"scripts": {
+		"phpcs": [
+			"phpcs -s -p"
+		],
+		"phpcs-pre-commit": [
+			"phpcs -s -p -n"
+		],
+		"phpcbf": [
+			"phpcbf -p"
+		],
+		"makepot-audit": [
+			"wp --allow-root i18n make-pot . --exclude=\".github,.wordpress-org,bin,node_modules,vendor,tests, build\" --slug=custom-code-snippets"
+		],
+		"makepot": [
+			"@makepot-audit --skip-audit"
+		]
+	},
+	"extra": {
+		"scripts-description": {
+			"phpcs": "Analyze code against the WordPress coding standards with PHP_CodeSniffer",
+			"phpcbf": "Fix coding standards warnings/errors automatically with PHP Code Beautifier",
+			"makepot-audit": "Generate langauges/custom-code-snippets.pot file and run audit",
+			"makepot": "Generate langauges/custom-code-snippets.pot file"
+		}
+	},
+	"config": {
+		"allow-plugins": {
+			"composer/installers": true,
+			"dealerdirect/phpcodesniffer-composer-installer": true
+		}
+	}
 }
