--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"build": "webpack --mode production --config ./webpack.config.js",
 		"setup": "pnpm install && composer install && composer dump-autoload",
 		"makepot": "composer run makepot",
-		"release": "npm install && npm run build && gulp release"
+		"release": "npm install && npm run build && gulp release",
+		"dev": "webpack-dev-server --mode development --hot --config ./webpack.config.js"
 	},
 	"keywords": [
 		"code snippets",
@@ -25,7 +26,6 @@
 		"@emotion/styled": "^11.13.0",
 		"@monaco-editor/react": "^4.6.0",
 		"@tanstack/react-query": "^5.51.21",
-		"@tanstack/react-query-devtools": "^5.51.23",
 		"@wordpress/i18n": "^5.8.0",
 		"chakra-react-select": "^4.9.1",
 		"framer-motion": "^11.5.6",
@@ -90,7 +90,7 @@
 		"webpack": "^5.94.0",
 		"webpack-bundle-analyzer": "^4.10.2",
 		"webpack-cli": "^5.1.4",
-		"webpack-dev-server": "^5.1.0",
+		"webpack-dev-server": "^4.15.1",
 		"webpackbar": "^6.0.1"
 	}
 }
